align de imgs cobertura y fix de responsive

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -92,6 +92,10 @@ body{
 
 #covertura{
     margin-top: 10%;
+    img{
+        display:block;
+        margin:auto;
+    }
     .img--cobertura2{
         width: 700px;
     }
